--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
       </nav>
     <div class="container">
-        <div class="row mt-4 button-row">
+        <div class="row mt-4 buttopenon-row">
             <button id='addBook' type="button" class="btn btn-secondary btn-lg">ADD BOOK</button>
         </div>
         <div class="row table-row">
